add modules and navbar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,20 @@
+<mat-toolbar>
+  <div class="container d-flex align-items-center">
+    <span routerLink="/" class="nav_link"
+      ><img src="assets/images/logo.png" class="img-fluid img" alt="todo logo"
+    /></span>
+    <span class="spacer"></span>
+    <div class="d-flex justify-content-around align-items-center">
+      <span routerLink="/login" class="nav_link mr-2">
+        Login
+        <mat-icon>login</mat-icon>
+      </span>
+      |
+      <span routerLink="/register" class="nav_link ml-2">
+        Register
+        <mat-icon>how_to_reg</mat-icon>
+      </span>
+    </div>
+  </div>
+</mat-toolbar>
 <app-home></app-home>
