add home part layout

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,26 @@
-<div class="container">
-  <p>home works!</p>
-  <p>home works!</p>
+<div class="row">
+  <div class="col-6">
+    <button mat-fab>
+      <mat-icon>edit_note</mat-icon>
+    </button>
+  </div>
+  <div class="col-6">
+    <mat-form-field appearance="outline" class="d-flex justify-content-end">
+      <mat-label>Select a status</mat-label>
+      <mat-select placeholder="">
+        <mat-option value="COMPLETED">Done</mat-option>
+        <mat-option value="IN_PROGRESS">In Progress</mat-option>
+        <mat-option value="OPEN">OPEN</mat-option>
+      </mat-select>
+    </mat-form-field>
+  </div>
+</div>
+<hr />
+<div class="row">
+  <div class="col-10 col-md-6 offset-md-3 offset-1">
+    <mat-card class="todo">
+      <mat-card-title class="p-2 text-dark">todo title</mat-card-title>
+      <mat-card-content> fffff </mat-card-content>
+    </mat-card>
+  </div>
 </div>
