fix delete todo

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -26,7 +26,9 @@
           <mat-expansion-panel-header>
             <div class="d-flex justify-content-between w-100">
               <h3 class="mb-0 todo__title">{{ todo.title }}</h3>
-              <span (click)="deleteTodo($event)" class="delete_icon"
+              <span
+                (click)="deleteTodo($event, todo.todoId)"
+                class="delete_icon"
                 ><mat-icon>delete_outline</mat-icon></span
               >
             </div>
