--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,1 +1,45 @@
-<p>register works!</p>
+<div id="LoginForm">
+  <div class="container">
+    <h1 class="form-heading">Register Form</h1>
+    <div class="login-form">
+      <div class="main-div">
+        <div class="panel">
+          <h2>Register</h2>
+        </div>
+        <form #registerForm="ngForm" (ngSubmit)="register(registerForm)">
+          <div class="form-group">
+            <input
+              type="text"
+              class="form-control"
+              placeholder="Username"
+              ngModel
+              name="username"
+              required
+            />
+          </div>
+
+          <div class="form-group">
+            <input
+              type="password"
+              class="form-control"
+              placeholder="Password"
+              ngModel
+              name="password"
+              required
+            />
+          </div>
+          <div class="forgot">
+            <a routerLink="/login">Sign in here</a>
+          </div>
+          <button
+            type="submit"
+            [disabled]="registerForm.invalid"
+            class="btn btn-primary"
+          >
+            Create Account
+          </button>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
