--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -15,6 +15,7 @@
               ngModel
               name="username"
               required
+              autofocus
             />
           </div>
 
@@ -26,9 +27,31 @@
               ngModel
               name="password"
               required
+              minlength="6"
+              maxlength="12"
+              #pass="ngModel"
+              pattern="(?:(?=.*\d)|(?=.*\W+))(?![.\n])(?=.*[A-Z])(?=.*[a-z]).*$"
             />
           </div>
-          <div class="forgot">
+          <div
+            class="validate_message"
+            *ngIf="!pass.valid && pass.touched && pass.hasError('required')"
+          >
+            Password is required
+          </div>
+          <div
+            class="validate_message"
+            *ngIf="!pass.valid && pass.touched && pass.hasError('minlength')"
+          >
+            Password must be at least 6 characters long.
+          </div>
+          <div
+            class="validate_message"
+            *ngIf="!pass.valid && pass.touched && pass.hasError('pattern')"
+          >
+            Password must contain numbers letters
+          </div>
+          <div class="forgot mt-1">
             <a routerLink="/login">Sign in here</a>
           </div>
           <button
