--- a/src/styles.scss
+++ b/src/styles.scss
@@ -88,6 +88,12 @@ body {
   text-decoration: none;
 }
 
+.validate_message {
+  text-align: left;
+  font-size: 12px;
+  color: #db5757;
+}
+
 // media query
 @media (max-width: 650px) {
   .main-div {
