implement delete confirm

--- a/src/app/confirm-delete-dialog/confirm-delete-dialog.component.html
+++ b/src/app/confirm-delete-dialog/confirm-delete-dialog.component.html
@@ -1,5 +1,5 @@
 <p class="my-3">Are You sure you want to delete the todo?</p>
-<div class="mt-4 mx-auto">
+<div class="mt-4">
   <button mat-button [mat-dialog-close]="false" class="mr-2">Cancel</button>
   <button
     mat-raised-button
