--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-6">
-    <button mat-fab>
+    <button mat-fab (click)="openPopup()">
       <mat-icon>edit_note</mat-icon>
     </button>
   </div>
