--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -1,1 +1,33 @@
-<p>todo works!</p>
+<div class="todo">
+  <div class="row">
+    <div class="col-12">
+      <h3 class="text-center">Create new todo</h3>
+    </div>
+    <div class="col-12">
+      <div class="mb-3">
+        <label class="form-label">Title</label>
+        <input
+          class="form-control"
+          name="title"
+          [(ngModel)]="title"
+          [value]="title"
+        />
+      </div>
+      <div class="mb-3">
+        <label class="form-label">Description</label>
+        <input
+          class="form-control"
+          name="description"
+          [(ngModel)]="description"
+          [value]="description"
+        />
+      </div>
+    </div>
+    <div class="col-12 d-flex justify-content-end">
+      <button mat-flat-button (click)="onCancel()" class="mr-3">Cancel</button>
+      <button mat-raised-button color="primary" (click)="create()">
+        Create
+      </button>
+    </div>
+  </div>
+</div>
