--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,16 +9,32 @@
       <mat-label>Select a status</mat-label>
       <mat-select (selectionChange)="filterChanged($event)">
         <mat-option>All</mat-option>
-        <mat-option value="COMPLETED">Done</mat-option>
-        <mat-option value="INPROGRESS">In Progress</mat-option>
-        <mat-option value="OPEN">OPEN</mat-option>
+        <mat-option value="COMPLETED"
+          >Done <span class="status_circle done"></span
+        ></mat-option>
+        <mat-option value="INPROGRESS"
+          >In Progress <span class="status_circle progress"></span
+        ></mat-option>
+        <mat-option value="OPEN"
+          >Open <span class="status_circle open"></span
+        ></mat-option>
       </mat-select>
     </mat-form-field>
   </div>
 </div>
 <hr />
 <div class="row">
-  <div class="col-10 col-md-8 offset-md-2 offset-1">
+  <h3
+    class="text-capitalize text-center m-auto"
+    *ngIf="filteredTodos.length < 1"
+  >
+    There is no todos
+  </h3>
+
+  <div
+    class="col-10 col-md-8 offset-md-2 offset-1"
+    *ngIf="filteredTodos.length > 0"
+  >
     <!-- start todo -->
     <ng-container *ngFor="let todo of filteredTodos; let i = index">
       <div class="todo">
@@ -30,6 +46,14 @@
                 ><mat-icon>delete_outline</mat-icon></span
               >
             </div>
+            <span
+              class="todo_status"
+              [ngClass]="{
+                done: todo.status === 'COMPLETED',
+                progress: todo.status === 'INPROGRESS',
+                open: todo.status === 'OPEN'
+              }"
+            ></span>
           </mat-expansion-panel-header>
           <div class="todo__body">
             <div class="d-flex justify-content-between align-items-centers">
