--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -11,11 +11,13 @@ button.mat-fab {
 .todo {
   .mat-expansion-panel-header.mat-expanded,
   .mat-expansion-panel-header {
+    position: relative;
     height: auto;
     padding: 10px 15px;
   }
   &__title {
     text-transform: capitalize;
+    margin-left: 6px;
   }
 }
 .delete_icon {
@@ -26,4 +28,28 @@ button.mat-fab {
 }
 :host ::ng-deep mat-form-field .mat-form-field-wrapper {
   padding-bottom: 0 !important;
+}
+.status_circle {
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  display: inline-block;
+  margin-left: 8px;
+}
+.done {
+  background-color: #2ecc71;
+}
+.progress {
+  background-color: #f1c40f;
+}
+.open {
+  background-color: #e74c3c;
+}
+.todo_status {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 8px;
+  height: 100%;
+  border-radius: 0.25rem;
 }
